[JBTM-1799] Move javadoc configuration and narayana-full module to release profile

--- a/blacktie/jatmibroker-nbf/pom.xml
+++ b/blacktie/jatmibroker-nbf/pom.xml
@@ -94,22 +94,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <detectOfflineLinks>false</detectOfflineLinks>
-                    <excludePackageNames>org.jboss.narayana.blacktie.jatmibroker.core</excludePackageNames>
-                </configuration>
-            </plugin>
-            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>1.5</source>
@@ -231,4 +215,29 @@
     <properties>
         <test.output.type>shared</test.output.type>
     </properties>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <detectOfflineLinks>false</detectOfflineLinks>
+                            <excludePackageNames>org.jboss.narayana.blacktie.jatmibroker.core</excludePackageNames>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
