--- a/blacktie/pom.xml
+++ b/blacktie/pom.xml
@@ -16,11 +16,16 @@
 		02110-1301, USA.
 	-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <parent>
+    <groupId>org.jboss.narayana</groupId>
+    <artifactId>narayana-all</artifactId>
+    <version>5.0.0.M4-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.narayana.blacktie</groupId>
 	<artifactId>blacktie-all</artifactId>
 	<packaging>pom</packaging>
-	<version>5.0.0.M4-SNAPSHOT</version>
 	<name>BlackTie all files</name>
 	<description>BlackTie all files</description>
 	<url>http://www.jboss.org/blacktie</url>
