https://issues.jboss.org/browse/JBTM-1812

--- a/ArjunaJTS/jts/pom.xml
+++ b/ArjunaJTS/jts/pom.xml
@@ -225,6 +225,7 @@
                   <systemProperties combine.children="append" />
                   <excludes>
                     <exclude>**/JavaIdlRecoveryUnitTest.java</exclude>
+                    <exclude>**/JacORBGenericRecoveryCreatorUnitTest.java</exclude>
                     <exclude>**/common/**</exclude>
                     <exclude>**/exceptions/**</exclude>
                     <exclude>**/orbspecific/resources/**</exclude>
