--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -72,17 +72,6 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts-jacorb</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts-jacorb</artifactId>
-      <version>${project.version}</version>
-      <classifier>javadoc</classifier>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
       <artifactId>narayana-jts-integration</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -184,6 +173,27 @@
   </dependencies>
 
   <profiles>
+    <profile>
+      <id>jts-jacorb</id>
+      <activation>
+        <property>
+          <name>!jacorb-disabled</name>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>narayana-jts-jacorb</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>narayana-jts-jacorb</artifactId>
+          <version>${project.version}</version>
+          <classifier>javadoc</classifier>
+        </dependency>
+      </dependencies>
+    </profile>
     <profile>
       <id>jts-idlj</id>
       <activation>
