--- a/ArjunaJTS/orbportability/pom.xml
+++ b/ArjunaJTS/orbportability/pom.xml
@@ -37,38 +37,37 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default-compile</id>
+            <configuration>
+              <excludes>
+                <exclude>**</exclude>
+              </excludes>
+            </configuration>
+          </execution>
+          <execution>
+            <id>default-testCompile</id>
+            <configuration>
+              <testExcludes>
+                <exclude>**</exclude>
+              </testExcludes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-         <executions>
-            <execution>
-              <!-- jacorb is the default (determined by what we exclude from the classpath) -->
-              <id>default-test</id>
-              <phase>test</phase>
-              <goals>
-                <goal>test</goal>
-              </goals>
-              <configuration>
-                <skip>false</skip>
-                <systemProperties combine.children="append"/>
-                <excludes>
-                  <!-- exclude tests which we don't want to run -->
-                  <exclude>**/initialisation/postinit/**</exclude>
-                  <exclude>**/initialisation/postset/**</exclude>
-                  <exclude>**/initialisation/preinit/**</exclude>
-                  <exclude>**/initialisation/TestAttributeCallback.java</exclude>
-                  <exclude>**/SimpleObjectImpl.java</exclude>
-                  <exclude>**/TestAttributeCallback.java</exclude>
-                  <exclude>**/PrePostTestCallback.java</exclude>
-                  <!-- these ones need fixing -->
-                  <exclude>**/PropertyInitTest.java</exclude>
-                  <exclude>**/PropertyInitTest3.java</exclude>
-                </excludes>
-                <classpathDependencyExcludes>
-                  <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl</classpathDependencyExcludes>
-                  <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl:test-jar</classpathDependencyExcludes>
-                </classpathDependencyExcludes>
-              </configuration>
-            </execution>
-          </executions>
+        <executions>
+          <execution>
+            <id>default-test</id>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
@@ -83,26 +82,6 @@
       <artifactId>arjuna</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.jacorb</groupId>
-      <artifactId>jacorb</artifactId>
-      <version>${version.org.jacorb.jacorb}</version>
-      <scope>provided</scope>
-    </dependency>
-    <!-- pull in IDL stubs for each supported ORB (JacORB and Sun) -->
-    <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>jacorb-idl</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>jacorb-idl</artifactId>
-      <version>${project.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-
     <dependency>
       <groupId>org.jboss.narayana</groupId>
       <artifactId>common</artifactId>
@@ -158,6 +137,104 @@
   
   <profiles>
     <profile>
+      <id>jts-jacorb</id>
+      <activation>
+        <property>
+          <name>!jacorb-disabled</name>
+        </property>
+      </activation>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.jacorb</groupId>
+          <artifactId>jacorb</artifactId>
+          <version>${version.org.jacorb.jacorb}</version>
+          <scope>provided</scope>
+        </dependency>
+        <!-- pull in IDL stubs for each supported ORB (JacORB and Sun) -->
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>jacorb-idl</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>jacorb-idl</artifactId>
+          <version>${project.version}</version>
+          <type>test-jar</type>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>jacorb-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <excludes>
+                    <exclude>**/javaidl/**</exclude>
+                  </excludes>
+                </configuration>
+              </execution>
+              <execution>
+                <id>jacorb-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <testExcludes>
+                    <exclude>**/PropertyInitTest.java</exclude>
+                    <exclude>**/PropertyInitTest3.java</exclude>
+                  </testExcludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>surefire-jacorb</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                  <skip>false</skip>
+                  <systemProperties combine.children="append"/>
+                  <excludes>
+                    <!-- exclude tests which we don't want to run -->
+                    <exclude>**/initialisation/postinit/**</exclude>
+                    <exclude>**/initialisation/postset/**</exclude>
+                    <exclude>**/initialisation/preinit/**</exclude>
+                    <exclude>**/initialisation/TestAttributeCallback.java</exclude>
+                    <exclude>**/SimpleObjectImpl.java</exclude>
+                    <exclude>**/TestAttributeCallback.java</exclude>
+                    <exclude>**/PrePostTestCallback.java</exclude>
+                    <!-- these ones need fixing -->
+                    <exclude>**/PropertyInitTest.java</exclude>
+                    <exclude>**/PropertyInitTest3.java</exclude>
+                  </excludes>
+                  <classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl:test-jar</classpathDependencyExcludes>
+                  </classpathDependencyExcludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
       <id>jts-idlj</id>
       <activation>
         <property>
@@ -183,6 +260,34 @@
       
       <build>
         <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>idlj-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <excludes>
+                    <exclude>**/jacorb/**</exclude>
+                  </excludes>
+                </configuration>
+              </execution>
+              <execution>
+                <id>idlj-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <testExcludes>
+                    <exclude>**/PropertyInitTest.java</exclude>
+                    <exclude>**/PropertyInitTest3.java</exclude>
+                  </testExcludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
