--- a/rts/at/integration/pom.xml
+++ b/rts/at/integration/pom.xml
@@ -11,7 +11,7 @@
 
     <parent>
         <groupId>org.jboss.narayana.rts</groupId>
-        <artifactId>rest-tx</artifactId>
+        <artifactId>restat</artifactId>
         <version>5.0.0.M4-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -21,7 +21,7 @@
     <artifactId>restat-integration</artifactId>
     <packaging>jar</packaging>
 
-    <name>Narayana: rest-tx integration</name>
+    <name>Narayana: restat integration</name>
     <description>REST-AT Integration</description>
 
 
