--- a/rts/at/webservice/pom.xml
+++ b/rts/at/webservice/pom.xml
@@ -18,15 +18,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
-    <artifactId>rest-tx</artifactId>
+    <artifactId>restat</artifactId>
     <version>5.0.0.M4-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>restat-web</artifactId>
   <packaging>war</packaging>
-  <name>Narayana: rest-tx webservice</name>
-  <description>Provides Transactions for web applications</description>
+  <name>Narayana: restat webservice</name>
+  <description>Bundles tx as a deployable war archive</description>
+
   <properties>
     <version.artifactId>5.0.0.M4-SNAPSHOT</version.artifactId>
     <artifactId.name>restat-web</artifactId.name>
