--- a/rts/pom.xml
+++ b/rts/pom.xml
@@ -26,7 +26,7 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
   <groupId>org.jboss.narayana.rts</groupId>
   <artifactId>rest-tx</artifactId>
   <packaging>pom</packaging>
-  <name>Narayana: rest-tx</name>
+  <name>Narayana: RESTful transactions</name>
   <description>RESTful transactions</description>
   <url>http://www.jboss.org/jbosstm</url>
  
@@ -65,9 +65,6 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
   </profiles>
 
   <modules>
-    <module>util</module>
-    <module>tx</module>
-    <module>webservice</module>
-    <module>integration</module>
+    <module>at</module>
   </modules>
 </project>
