--- a/ArjunaCore/arjunacore/pom.xml
+++ b/ArjunaCore/arjunacore/pom.xml
@@ -174,6 +174,7 @@
         	  <doCheck>false</doCheck>
         	  <doUpdate>false</doUpdate>
         	  <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
+            <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
         	</configuration>
 	      </plugin>
             </plugins>
