--- a/ArjunaJTA/narayana-jta/pom.xml
+++ b/ArjunaJTA/narayana-jta/pom.xml
@@ -199,6 +199,7 @@
         	  <doCheck>false</doCheck>
         	  <doUpdate>false</doUpdate>
         	  <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
+            <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
         	</configuration>
 	      </plugin>
             </plugins>
