--- a/ArjunaJTS/narayana-jts-idlj/pom.xml
+++ b/ArjunaJTS/narayana-jts-idlj/pom.xml
@@ -251,6 +251,7 @@
         	  <doCheck>false</doCheck>
         	  <doUpdate>false</doUpdate>
         	  <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
+            <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
         	</configuration>
 	      </plugin>
             </plugins>
