--- a/XTS/jbossxts/pom.xml
+++ b/XTS/jbossxts/pom.xml
@@ -268,6 +268,7 @@
         	  <doCheck>false</doCheck>
         	  <doUpdate>false</doUpdate>
         	  <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
+            <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
         	</configuration>
 	      </plugin>
             </plugins>
