Removed references to buildScmBranch as this is not required for git

--- a/ArjunaJTS/narayana-jts-idlj/pom.xml
+++ b/ArjunaJTS/narayana-jts-idlj/pom.xml
@@ -43,7 +43,7 @@
               <Specification-Version>1.2/1.0</Specification-Version>
               <Specification-Vendor>Oracle</Specification-Vendor>
               <Implementation-Version>${project.version} (revision: ${buildNumber})</Implementation-Version>
-              <arjuna-scm-revision>${buildScmBranch} (revision: ${buildNumber})</arjuna-scm-revision>
+              <arjuna-scm-revision>${buildNumber}</arjuna-scm-revision>
               <arjuna-properties-file>jbossts-idlj-properties.xml</arjuna-properties-file>
               <arjuna-builder>JBoss Inc. [${user.name}] ${os.name} ${os.version} ${buildproperty.date}</arjuna-builder>
             </manifestEntries>
@@ -250,7 +250,6 @@
         	<configuration>
         	  <doCheck>false</doCheck>
         	  <doUpdate>false</doUpdate>
-        	  <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
             <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
         	</configuration>
 	      </plugin>
