--- a/ArjunaCore/arjunacore/pom.xml
+++ b/ArjunaCore/arjunacore/pom.xml
@@ -39,7 +39,7 @@
         <configuration>
           <archive>
             <manifestEntries>
-              <arjuna-scm-revision>${buildScmBranch} (revision: ${buildNumber})</arjuna-scm-revision>
+              <arjuna-scm-revision>${buildNumber}</arjuna-scm-revision>
               <arjuna-properties-file>jbossts-properties.xml</arjuna-properties-file>
               <arjuna-builder>JBoss Inc. [${user.name}] ${os.name} ${os.version} ${buildproperty.date}</arjuna-builder>
             </manifestEntries>
@@ -173,7 +173,6 @@
         	<configuration>
         	  <doCheck>false</doCheck>
         	  <doUpdate>false</doUpdate>
-        	  <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
             <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
         	</configuration>
 	      </plugin>
