--- a/XTS/jbossxts/pom.xml
+++ b/XTS/jbossxts/pom.xml
@@ -43,7 +43,7 @@
               <Specification-Version>1.1</Specification-Version>
               <Specification-Vendor>Oasis</Specification-Vendor>
               <Implementation-Version>${project.version} (revision: ${buildNumber})</Implementation-Version>
-              <arjuna-scm-revision>${buildScmBranch} (revision: ${buildNumber})</arjuna-scm-revision>
+              <arjuna-scm-revision>${buildNumber}</arjuna-scm-revision>
               <arjuna-properties-file>jbossts-properties.xml</arjuna-properties-file>
               <arjuna-builder>JBoss Inc. [${user.name}] ${os.name} ${os.version} ${buildproperty.date}</arjuna-builder>
             </manifestEntries>
@@ -267,7 +267,6 @@
         	<configuration>
         	  <doCheck>false</doCheck>
         	  <doUpdate>false</doUpdate>
-        	  <scmBranchPropertyName>buildScmBranch</scmBranchPropertyName>
             <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
         	</configuration>
 	      </plugin>
