--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,21 @@
                     <ignore></ignore>
                   </action>
                 </pluginExecution>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.jboss.byteman</groupId>
+                    <artifactId>
+                      byteman-rulecheck-maven-plugin
+                    </artifactId>
+                    <versionRange>[2.1.3,)</versionRange>
+                    <goals>
+                      <goal>rulecheck</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
               </pluginExecutions>
             </lifecycleMappingMetadata>
           </configuration>
