--- a/XTS/localjunit/disabled-context-propagation/pom.xml
+++ b/XTS/localjunit/disabled-context-propagation/pom.xml
@@ -36,15 +36,11 @@
     <name>Narayana: XTS Disabled Context Propagation tests</name>
     <description>Narayana: XTS Disabled Context Propagation tests</description>
 
-    <properties>
-        <version.plugin.antrun>1.7</version.plugin.antrun>
-    </properties>
-
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
-                <version>${version.plugin.antrun}</version>
+                <version>${version.org.apache.maven.plugins.maven-antrun-plugin}</version>
                 <executions>
                     <execution>
                         <id>create-disabled-context-propagation-configuration</id>
@@ -109,7 +105,7 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-antrun-plugin</artifactId>
-                        <version>${version.plugin.antrun}</version>
+                        <version>${version.org.apache.maven.plugins.maven-antrun-plugin}</version>
                         <executions>
                             <execution>
                                 <id>create-disabled-context-propagation-configuration</id>
@@ -144,7 +140,7 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-antrun-plugin</artifactId>
-                        <version>${version.plugin.antrun}</version>
+                        <version>${version.org.apache.maven.plugins.maven-antrun-plugin}</version>
                         <executions>
                             <execution>
                                 <id>create-disabled-context-propagation-configuration</id>
