--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
+          <version>${version.org.eclipse.m2e.lifecycle-mapping}</version>
           <configuration>
             <lifecycleMappingMetadata>
               <pluginExecutions>
@@ -263,57 +263,57 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>buildnumber-maven-plugin</artifactId>
-          <version>1.0</version>
+          <version>${version.org.codehaus.mojo.buildnumber-maven-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.7</version>
+          <version>${version.org.codehaus.mojo.build-helper-maven-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>idlj-maven-plugin</artifactId>
-          <version>1.2.1</version>
+          <version>${version.org.codehaus.mojo.idlj-maven-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8</version>
+          <version>${version.org.apache.maven.plugins.maven-javadoc-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>1.4</version>
+          <version>${version.org.apache.maven.plugins.maven-shade-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>jboss-maven-plugin</artifactId>
-          <version>1.3.1</version>
+          <version>${version.org.codehaus.mojo.jboss-maven-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.jboss.as.plugins</groupId>
           <artifactId>jboss-as-maven-plugin</artifactId>
-          <version>7.1.1.Final</version>
+          <version>${version.org.jboss.as.plugins.jboss-as-maven-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>2.5</version>
+          <version>${version.org.apache.maven.plugins.maven-clean-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>1.2</version>
+          <version>${version.org.apache.maven.plugins.maven-enforcer-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
-          <version>2.4</version>
+          <version>${version.org.apache.maven.plugins.maven-install-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>2.3.1</version>
+          <version>${version.org.apache.maven.plugins.maven-jar-plugin}</version>
         <configuration>
           <archive>
             <manifestEntries>
@@ -328,12 +328,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
-          <version>2.1.1</version>
+          <version>${version.org.apache.maven.plugins.maven-war-plugin}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>${version.org.apache.maven.plugins.maven-compiler-plugin}</version>
           <configuration>
             <source>1.6</source>
             <target>1.6</target>
@@ -343,7 +343,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.6</version>
+          <version>${version.org.apache.maven.plugins.maven-deploy-plugin}</version>
           <configuration>
             <skip>true</skip>
           </configuration>
@@ -351,7 +351,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.12.4</version>
+          <version>${version.org.apache.maven.plugins.maven-surefire-plugin}</version>
             <configuration>
               <forkMode>pertest</forkMode>
               <workingDirectory>target/test-classes</workingDirectory>
@@ -366,7 +366,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>2.1.2</version>
+          <version>${version.org.apache.maven.plugins.maven-source-plugin}</version>
         </plugin>
 	</plugins>
     </pluginManagement>
@@ -487,6 +487,28 @@
     <version.javax.annotation>1.2-b04</version.javax.annotation>
     <version.org.jboss.arquillian.osgi>2.0.0.CR2</version.org.jboss.arquillian.osgi>
     <version.org.jboss.jboss-transaction-spi>7.0.1.Final</version.org.jboss.jboss-transaction-spi>
+
+    <!-- Maven plugin versions -->
+    <version.org.eclipse.m2e.lifecycle-mapping>1.0.0</version.org.eclipse.m2e.lifecycle-mapping>
+    <version.org.codehaus.mojo.buildnumber-maven-plugin>1.2</version.org.codehaus.mojo.buildnumber-maven-plugin>
+    <version.org.codehaus.mojo.build-helper-maven-plugin>1.8</version.org.codehaus.mojo.build-helper-maven-plugin>
+    <version.org.codehaus.mojo.idlj-maven-plugin>1.2.1</version.org.codehaus.mojo.idlj-maven-plugin>
+    <version.org.codehaus.mojo.jboss-maven-plugin>1.5.0</version.org.codehaus.mojo.jboss-maven-plugin>
+    <version.org.codehaus.mojo.findbugs-maven-plugin>2.5.2</version.org.codehaus.mojo.findbugs-maven-plugin>
+    <version.org.jboss.as.plugins.jboss-as-maven-plugin>7.4.Final</version.org.jboss.as.plugins.jboss-as-maven-plugin>
+    <version.org.apache.maven.plugins.maven-javadoc-plugin>2.9.1</version.org.apache.maven.plugins.maven-javadoc-plugin>
+    <version.org.apache.maven.plugins.maven-shade-plugin>2.1</version.org.apache.maven.plugins.maven-shade-plugin>
+    <version.org.apache.maven.plugins.maven-clean-plugin>2.5</version.org.apache.maven.plugins.maven-clean-plugin>
+    <version.org.apache.maven.plugins.maven-enforcer-plugin>1.3.1</version.org.apache.maven.plugins.maven-enforcer-plugin>
+    <version.org.apache.maven.plugins.maven-jar-plugin>2.4</version.org.apache.maven.plugins.maven-jar-plugin>
+    <version.org.apache.maven.plugins.maven-war-plugin>2.4</version.org.apache.maven.plugins.maven-war-plugin>
+    <version.org.apache.maven.plugins.maven-compiler-plugin>3.1</version.org.apache.maven.plugins.maven-compiler-plugin>
+    <version.org.apache.maven.plugins.maven-deploy-plugin>2.7</version.org.apache.maven.plugins.maven-deploy-plugin>
+    <version.org.apache.maven.plugins.maven-surefire-plugin>2.16</version.org.apache.maven.plugins.maven-surefire-plugin>
+    <version.org.apache.maven.plugins.maven-source-plugin>2.2.1</version.org.apache.maven.plugins.maven-source-plugin>
+    <version.org.apache.maven.plugins.maven-antrun-plugin>1.7</version.org.apache.maven.plugins.maven-antrun-plugin>
+    <version.org.apache.maven.plugins.maven-install-plugin>2.4</version.org.apache.maven.plugins.maven-install-plugin>
+    <version.org.apache.maven.plugins.maven-site-plugin>3.2</version.org.apache.maven.plugins.maven-site-plugin>
   </properties>
   <modules>
     <module>ext</module>
@@ -544,7 +566,7 @@
                     <plugin>
                       <groupId>org.apache.maven.plugins</groupId>
                       <artifactId>maven-jar-plugin</artifactId>
-                      <version>2.3.2</version>
+                      <version>${version.org.apache.maven.plugins.maven-jar-plugin}</version>
                       <configuration>
                         <classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory>
                       </configuration>
@@ -562,7 +584,7 @@
                     <plugin>
                       <groupId>org.apache.maven.plugins</groupId>
                       <artifactId>maven-antrun-plugin</artifactId>
-                      <version>${version.plugin.antrun}</version>
+                      <version>${version.org.apache.maven.plugins.maven-antrun-plugin}</version>
                       <executions>
                         <execution>
                           <id>instrument</id>
@@ -647,7 +669,6 @@
                   </plugins>
                 </build>
                 <properties>
-                  <version.plugin.antrun>1.7</version.plugin.antrun>
                   <version.emma>2.0.12224-adinn</version.emma>
                 </properties>
               </profile>
@@ -666,7 +687,7 @@
                         <plugin>
                             <groupId>org.eclipse.m2e</groupId>
                             <artifactId>lifecycle-mapping</artifactId>
-                            <version>1.0.0</version>
+                            <version>${version.org.eclipse.m2e.lifecycle-mapping}</version>
                             <configuration>
                                 <lifecycleMappingMetadata>
                                     <pluginExecutions>
@@ -693,7 +714,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>findbugs-maven-plugin</artifactId>
-                        <version>2.3.3</version>
+                        <version>${version.org.codehaus.mojo.findbugs-maven-plugin}</version>
                         <executions>
                             <execution>
                                 <id>findbugs</id>
@@ -707,13 +728,13 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-site-plugin</artifactId>
-                        <version>3.0</version>
+                        <version>${version.org.apache.maven.plugins.maven-site-plugin}</version>
                         <configuration>
                             <reportPlugins>
                                 <plugin>
                                     <groupId>org.codehaus.mojo</groupId>
                                     <artifactId>findbugs-maven-plugin</artifactId>
-                                    <version>2.3.3</version>
+                                    <version>${version.org.codehaus.mojo.findbugs-maven-plugin}</version>
                                 </plugin>
                             </reportPlugins>
                         </configuration>
