--- a/blacktie/blacktie/pom.xml
+++ b/blacktie/blacktie/pom.xml
@@ -206,5 +206,9 @@
             <artifactId>blacktie-admin-services-ear</artifactId>
             <type>ear</type>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.narayana.blacktie</groupId>
+            <artifactId>blacktie-stompconnect</artifactId>
+        </dependency>
     </dependencies>
 </project>
