--- a/blacktie/pom.xml
+++ b/blacktie/pom.xml
@@ -212,6 +212,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.narayana.blacktie</groupId>
+				<artifactId>blacktie-stompconnect</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.narayana.blacktie</groupId>
 				<artifactId>blacktie-jatmibroker-xatmi</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -346,6 +351,7 @@
 		<module>xsd</module>
 		<module>idl</module>
 		<module>messaging</module>
+		<module>stompconnect-1.0</module>
 		<module>jatmibroker-xatmi</module>
 		<module>jatmibroker-nbf</module>
 		<module>blacktie-admin-services</module>
