--- a/blacktie/jatmibroker-nbf/pom.xml
+++ b/blacktie/jatmibroker-nbf/pom.xml
@@ -156,6 +156,11 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.blacktie</groupId>
+            <artifactId>blacktie-stompconnect</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.narayana.blacktie</groupId>
             <artifactId>blacktie-xsd</artifactId>
         </dependency>
         <dependency>
