--- a/blacktie/jatmibroker-xatmi/pom.xml
+++ b/blacktie/jatmibroker-xatmi/pom.xml
@@ -172,6 +172,11 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.blacktie</groupId>
+            <artifactId>blacktie-stompconnect</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.narayana.blacktie</groupId>
             <artifactId>blacktie-xsd</artifactId>
         </dependency>
         <dependency>
