JBTM-1909 keep the shaded pom in the target folder

--- a/pom.xml
+++ b/pom.xml
@@ -270,6 +270,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
           <version>${version.org.apache.maven.plugins.maven-shade-plugin}</version>
+          <configuration>
+            <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
