[JBTM-1556] SPI Testing

--- a/ArjunaJTA/pom.xml
+++ b/ArjunaJTA/pom.xml
@@ -38,6 +38,7 @@
   </build>
   <modules>
     <module>jta</module>
+    <module>spi</module>
     <module>cdi</module>
     <module>jdbc</module>
     <module>narayana-jta</module>
