JBTM-1902. Build number of Narayana is not resolved, says ${buildNumber}

--- a/ArjunaJTS/narayana-jts-jacorb/pom.xml
+++ b/ArjunaJTS/narayana-jts-jacorb/pom.xml
@@ -113,6 +113,24 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <doCheck>false</doCheck>
+          <doUpdate>false</doUpdate>
+          <shortRevisionLength>5</shortRevisionLength>
+          <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -239,23 +257,6 @@
             </executions>
             <inherited>false</inherited>
           </plugin>
-	      <plugin>
-        	<groupId>org.codehaus.mojo</groupId>
-	        <artifactId>buildnumber-maven-plugin</artifactId>
-        	<executions>
-	          <execution>
-        	    <phase>validate</phase>
-        	    <goals>
-        	      <goal>create</goal>
-        	    </goals>
-        	  </execution>
-        	</executions>
-        	<configuration>
-        	  <doCheck>false</doCheck>
-        	  <doUpdate>false</doUpdate>
-            <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
-        	</configuration>
-	      </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
