--- a/ArjunaJTA/narayana-jta/pom.xml
+++ b/ArjunaJTA/narayana-jta/pom.xml
@@ -106,6 +106,24 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <doCheck>false</doCheck>
+          <doUpdate>false</doUpdate>
+          <shortRevisionLength>5</shortRevisionLength>
+          <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -168,23 +186,6 @@
                 </executions>
                 <inherited>false</inherited>
               </plugin>
-	      <plugin>
-        	<groupId>org.codehaus.mojo</groupId>
-	        <artifactId>buildnumber-maven-plugin</artifactId>
-        	<executions>
-	          <execution>
-        	    <phase>validate</phase>
-        	    <goals>
-        	      <goal>create</goal>
-        	    </goals>
-        	  </execution>
-        	</executions>
-        	<configuration>
-        	  <doCheck>false</doCheck>
-        	  <doUpdate>false</doUpdate>
-            <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
-        	</configuration>
-	      </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
