--- a/ArjunaJTS/integration/pom.xml
+++ b/ArjunaJTS/integration/pom.xml
@@ -55,6 +55,24 @@
           <useManifestOnlyJar>false</useManifestOnlyJar>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <doCheck>false</doCheck>
+          <doUpdate>false</doUpdate>
+          <shortRevisionLength>5</shortRevisionLength>
+          <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -172,23 +190,6 @@
             </executions>
             <inherited>false</inherited>
           </plugin>
-	      <plugin>
-        	<groupId>org.codehaus.mojo</groupId>
-	        <artifactId>buildnumber-maven-plugin</artifactId>
-        	<executions>
-	          <execution>
-        	    <phase>validate</phase>
-        	    <goals>
-        	      <goal>create</goal>
-        	    </goals>
-        	  </execution>
-        	</executions>
-        	<configuration>
-        	  <doCheck>false</doCheck>
-        	  <doUpdate>false</doUpdate>
-            <revisionOnScmFailure>${project.version}-noscm</revisionOnScmFailure>
-        	</configuration>
-	      </plugin>
             </plugins>
         </build>
     </profile>
