JBTM-1937 run findbugs on CI profile

--- a/pom.xml
+++ b/pom.xml
@@ -709,6 +709,9 @@
                                 <goals>
                                     <goal>check</goal>
                                 </goals>
+                                <configuration>
+                                  <failOnError>false</failOnError>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
